--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,8 +2,7 @@
 @import 'compass';
 @import 'partials/variables';
 @import 'partials/flags';
-@import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
-@import '../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/theme';
+@import 'partials/crud';
 
 html {
     height: 100%;
