import these here

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,6 @@
 
+@import '../node_modules/bootstrap/scss/bootstrap';
+@import '../node_modules/font-awesome/scss/font-awesome';
 @import 'partials/variables';
 @import 'partials/flags';
 @import 'partials/crud';
