style links in menu properly

--- a/sass/partials/_menu.scss
+++ b/sass/partials/_menu.scss
@@ -7,11 +7,11 @@ $nav_bg: $nav_dark !default;
 
 .navbar-brand.active {
     background: #080808;
-    }
+}
 .navbar {
     background: $nav_bg;
     border-bottom: 2px solid $nav_border;
-    }
+}
 #navbar {
     small {
         border-radius: 50%;
@@ -26,10 +26,24 @@ $nav_bg: $nav_dark !default;
         font-weight: bold;
         text-shadow: 0!important;
         text-align: center;
+    }
+    a {
+        color: $white;
+
+        &:hover {
+            color: darken($white, 20%);
         }
+    }
     a:hover small, .active small {
         color: $dark;
         text-shadow: 0!important;
-        }
     }
+}
+.navbar-brand {
+    color: $white;
+
+    &:hover {
+        color: darken($white, 20%);
+    }
+}
 
