--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,7 +32,7 @@ body, .theme-showcase {
         }
     }
 body {
-    padding: 52px 0 32px;
+    padding: 60px 0;
     }
 #footer {
     .navbar {
